--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link data-n-head="1" rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true">
+    <link data-n-head="1" rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&amp;display=swap">
+    <link data-n-head="1" rel="preconnect" href="https://fonts.googleapis.com" crossorigin="true">
     <title>Vite + React</title>
   </head>
   <body>
