--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:title" content="Hercules DEX Wink by Winks.fun" />
     <meta name="twitter:description"
       content="Seamless swaps, staking, and real yield. Build and launch with Ease" />
-    <meta name="twitter:player" content="https://okx-wink.vercel.app/">
+    <meta name="twitter:player" content="https://hercules-wink.vercel.app/">
     <meta name="twitter:player:width" content="360">
     <meta name="twitter:player:height" content="560">
     <meta name="twitter:image"
