--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="description"
       content="Seamless swaps, staking, and real yield. Build and launch with Ease" />
     <meta name="twitter:card" content="player" />
-    <meta name="twitter:site" content="https://x.com/ultimatedigits">
+    <meta name="twitter:site" content="@UltimateDigits">
     <meta name="twitter:title" content="Hercules DEX Wink by Winks.fun" />
     <meta name="twitter:description"
       content="Seamless swaps, staking, and real yield. Build and launch with Ease" />
-    <meta name="twitter:player" content="https://hercules-wink.vercel.app/">
+    <meta name="twitter:player" content="https://hercules.winks.fun/">
     <meta name="twitter:player:width" content="360">
     <meta name="twitter:player:height" content="560">
     <meta name="twitter:image"
